<resources>
    <string name="app_name">TaskManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_task_added">No Task Added</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="high_priority">High Priority</string>
    <string name="medium_priority">Medium Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="delete_all">Delete All</string>
    <string name="save_task">Save Task</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>

</resources>